--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,16 @@
 			<artifactId>junit-jupiter-engine</artifactId>
 			<version>5.3.1</version>
 		</dependency>
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>1.4.198</version>
+		</dependency>
+		<dependency>
+			<groupId>org.dbunit</groupId>
+			<artifactId>dbunit</artifactId>
+			<version>2.5.4</version>
+		</dependency>
 
 	</dependencies>
 </project>
