--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,11 @@
 			<artifactId>jackson-databind</artifactId>
 			<version>2.9.8</version>
 		</dependency>
+		<dependency>
+			<groupId>io.dropwizard</groupId>
+			<artifactId>dropwizard-testing</artifactId>
+			<version>1.3.5</version>
+		</dependency>
 
 
 
