--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>dropwizard-testing</artifactId>
 			<version>1.3.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-infrastructure</artifactId>
+			<version>4.1.1.RELEASE</version>
+		</dependency>
 
 
 
